--- a/UI/Electron_XPLAT/package.json
+++ b/UI/Electron_XPLAT/package.json
@@ -20,7 +20,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^12.0.4",
-    "electron-packager": "^15.2.0"
+    "electron-packager": "^15.2.0",
+    "electron-reloader": "^1.2.1"
   },
   "dependencies": {
     "ws": "^7.4.5"
