--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ InspectionCore/CoreHub/Makefile
 UI/Electron_XPLAT/release-builds
 InspectionCore/contrib/aravis/test/arvTool/arvtool
 InspectionCore/contrib/smem_channel/test/node_napi/build/
+UI/Electron_XPLAT/build
