--- a/UI/Electron_XPLAT/package.json
+++ b/UI/Electron_XPLAT/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
+  "gypfile": true,
   "scripts": {
     "start": "electron .",
     "package-mac": "electron-packager ./ --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
@@ -24,6 +25,8 @@
     "electron-reloader": "^1.2.1"
   },
   "dependencies": {
+    "bindings": "*",
+    "node-addon-api": "*",
     "ws": "^7.4.5"
   }
 }
