APP: Exlectron update

--- a/UI/Electron_XPLAT/package.json
+++ b/UI/Electron_XPLAT/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-quick-start",
+  "name": "Xception_INSP",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
