--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -89,7 +89,7 @@
     "build-w-android": "set NOTIMON_PRJ=deploy&&webpack --progress --colors --watch",
     "build-opt-android": "NODE_ENV=production NOTIMON_PRJ=deploy webpack --progress --colors --watch",
     "build-win-android": "set NODE_ENV=production&&set NOTIMON_PRJ=deploy&&webpack --progress --colors --watch",
-    "dev": "webpack-dev-server --mode development --hot",
+    "dev": "webpack-dev-server --mode development --hot --define __DEV_MODE__=true",
     "dev_detail": "webpack-dev-server --mode development --hot --colors --progress --profile"
   },
   "repository": {
