ELectron APP update

--- a/UI/Electron_XPLAT/app_setup_info.json
+++ b/UI/Electron_XPLAT/app_setup_info.json
@@ -1,3 +1,1 @@
-{
-  "APP_INFO_FILE_PATH":"/Users/mdm/visSele/export/app_setup_info.json"
-}
+{"APP_INFO_FILE_PATH":"C:\\Users\\surface\\Documents\\visSele\\export/app_setup_info.json"}
