Core: Camera code update

--- a/InspectionCore/Core0_1/Makefile
+++ b/InspectionCore/Core0_1/Makefile
@@ -106,7 +106,8 @@ else
 	EXT_OBJS+=
 	FEATURE_COMPILE_W_ARAVIS=1
 	
-	# FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=1
+	FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=1
+	# FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK=1
 endif
 
 
