--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ UI/Electron_XPLAT/release-builds
 InspectionCore/contrib/aravis/test/arvTool/arvtool
 InspectionCore/contrib/smem_channel/test/node_napi/build/
 UI/Electron_XPLAT/build
+UI/Electron_XPLAT/app_setup_info.json
