--- a/UI/Electron_XPLAT/package.json
+++ b/UI/Electron_XPLAT/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
     "node-addon-api": "*",
+    "request": "^2.88.2",
     "unzipper": "^0.10.11",
     "ws": "^7.4.5"
   }
