Peripheral: SlideInsp update

--- a/Peripheral/slideInsp_ESP32/platformio.ini
+++ b/Peripheral/slideInsp_ESP32/platformio.ini
@@ -11,13 +11,19 @@
 [platformio]
 src_dir = ./
 
-[env:esp32dev]
+[env:esp32cam]
 platform = espressif32
 board = esp32cam
 board_build.f_cpu = 80000000L
 framework = arduino
 upload_speed = 921600
 
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+board_build.f_cpu = 80000000L
+framework = arduino
+upload_speed = 921600
 
 ; upload_port = /dev/cu.SLAB_USBtoUART
 ; monitor_port = /dev/cu.SLAB_USBtoUART
