--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ InspectionCore/contrib/aravis/test/arvTool/arvtool
 InspectionCore/contrib/smem_channel/test/node_napi/build/
 UI/Electron_XPLAT/build
 UI/Electron_XPLAT/app_setup_info.json
+InspectionCore/Core0_1/visSele
