--- a/Peripheral/uInspMEGA/platformio.ini
+++ b/Peripheral/uInspMEGA/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 upload_speed = 115200
 lib_deps = https://github.com/arduino-libraries/Ethernet.git
 monitor_speed = 115200
+build_flags = -Isrc/include -Isrc
