Core: try to use cmake

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ InspectionCore/contrib/smem_channel/test/node_napi/build/
 UI/Electron_XPLAT/build
 UI/Electron_XPLAT/app_setup_info.json
 InspectionCore/Core0_1/visSele
+InspectionCore/Core0_1/CMakeFiles/
+InspectionCore/Core0_1/Makefile
