--- a/InspectionCore/Core0_1/Makefile_mods
+++ b/InspectionCore/Core0_1/Makefile_mods
@@ -54,7 +54,7 @@ export FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=0
 # export MODULE_GLACC=$(abspath $(moduleRoot)/GLAcc)
 
 
-target_bin=visSele
+# target_bin=visSele
 ODIR=obj
 IDIR=	include/ \
 			$(MODULE_acvImage)/include/ \
@@ -75,12 +75,13 @@ IDIR=	include/ \
 			$(MODULE_lodepng)\
 			$(MODULE_smem_channel)\
 			$(MODULE_shape_based_matching)/include \
+      # /usr/local/include/opencv4
 			# $(MODULE_DataChannel)/include\
 			# $(MODULE_MLNN)/include/  \
 
 
 
-_OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp wiringPanel.opp
+# _OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp wiringPanel.opp
 
 MLNN_OBJS=MLNNUtil.opp MLNL.opp MLNN.opp MLOpt.opp
 
