Build: artifact sexport script

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ InspectionCore/Core0_1/Makefile
 InspectionCore/MatchingEngine/CMakeLists.txt
 InspectionCore/MatchingEngine/CMakeFiles/
 InspectionCore/MatchingEngine/Makefile
+InspectionCore/Core0_1/install_manifest.txt
