Core: CMake update to let makefile use cmake's var

--- a/InspectionCore/Core0_1/Makefile_mods
+++ b/InspectionCore/Core0_1/Makefile_mods
@@ -1,5 +1,9 @@
 
-ifeq ($(OS)$(CC),Windows_NTcc)
+$(info OS:${OS})
+$(info XXXX:${XXXX})
+
+
+ifeq ($(OS),Windows_NT)
 	export platform=win_x64
 	FLAGS+= -static -static-libgcc -static-libstdc++ -lws2_32
 else
@@ -12,41 +16,8 @@ endif
 moduleRoot=../
 
 
-export MODULE_acvImage=$(abspath $(moduleRoot)/acvImage)
-export MODULE_cwebsocket=$(abspath $(moduleRoot)/contrib/cwebsocket)
-export MODULE_circleFitting=$(abspath $(moduleRoot)/contrib/circleFitting)
-export MODULE_aravis=$(abspath $(moduleRoot)/contrib/aravis/$(platform))
-export MODULE_MindVision_GIGE=$(abspath $(moduleRoot)/contrib/MindVision_GIGE/$(platform))
-export MODULE_Compat_dirent=$(abspath $(moduleRoot)/contrib/Compat_dirent/$(platform))
-export MODULE_cJSON=$(abspath $(moduleRoot)/contrib/cJSON)
-export MODULE_mjpegLib=$(abspath $(moduleRoot)/contrib/mjpegLib)
-export MODULE_logctrl=$(abspath $(moduleRoot)/logctrl)
-export MODULE_common_lib=$(abspath $(moduleRoot)/common_lib)
-export MODULE_zlib=$(abspath $(moduleRoot)/contrib/zlib-1.2.11)
-export MODULE_SOIL=$(abspath $(moduleRoot)/contrib/SOIL)
-export MODULE_polyfit=$(abspath $(moduleRoot)/contrib/polyfit)
-export MODULE_lodepng=$(abspath $(moduleRoot)/contrib/lodepng)
-# export MODULE_DataChannel=$(abspath $(moduleRoot)/DataChannel)
-export MODULE_CameraLayer=$(abspath $(moduleRoot)/CameraLayer)
-export MODULE_MJPEG_Streamer=$(abspath $(moduleRoot)/MJPEG_Streamer)
-
-export MODULE_shape_based_matching=$(abspath $(moduleRoot)/contrib/shape_based_matching)
-
-export MODULE_hikrobot_camera_sdk=$(abspath $(moduleRoot)/contrib/hikrobot_camera_sdk)
-export MODULE_smem_channel=$(abspath $(moduleRoot)/contrib/smem_channel)
-
-export MODULE_BPG_Protocol=$(abspath $(moduleRoot)/BPG_Protocol)
-
-
-# export MODULE_MLNN=$(abspath $(moduleRoot)/MLNN)
-export MODULE_MatchingEngine=$(abspath $(moduleRoot)/MatchingEngine)
-
 export SO_EXPORT_PATH=$(abspath .)
 
-
-export FEATURE_COMPILE_W_ARAVIS=0
-export FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK=0
-export FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=0
 
 
 # export GLEWSRCDir=$(abspath ../../$(moduleRoot)/glew-2.1.0)
@@ -102,18 +73,12 @@ EXT_OBJS= $(MODULE_circleFitting)/CircleFitting.a \
 					# $(addprefix $(MODULE_MLNN)/obj/,$(MLNN_OBJS)) \
           # $(MODULE_MatchingEngine)/MatchingEngine.a \
 
-ifeq ($(OS)$(CC),Windows_NTcc)
+ifeq ($(OS),Windows_NT)
 	EXT_OBJS+= $(MODULE_zlib)/staticlib/libz.a 
 	FLAGS+= -D_MINGW -D_WINDOWS
-	FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK=1
-	FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=1
 else
 	FLAGS+=  -std=c++11
 	EXT_OBJS+=
-	FEATURE_COMPILE_W_ARAVIS=1
-	
-	FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK=1
-	# FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK=1
 endif
 
 
@@ -165,38 +130,8 @@ endif
 export MakeTemplate:= $(abspath ../Makefile.in)
 STRICT_FLAGS= -Wall -Wextra -Werror -Wreturn-type -Werror=return-type
 
- 
-ifeq ($(FEATURE_COMPILE_W_ARAVIS),1)
-	FLAGS+= -D FEATURE_COMPILE_W_ARAVIS `pkg-config --cflags glib-2.0` 
-	IDIR+=$(MODULE_aravis)/include $(MODULE_aravis)/src 
-	LIBS+=`pkg-config --libs glib-2.0` -lgobject-2.0  $(MODULE_aravis)/src/libaravis-0.8.0.dylib  -Wl,-rpath .
-endif
 
-ifeq ($(FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK),1)
-
-	FLAGS+= -D FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK
-	IDIR+=$(MODULE_hikrobot_camera_sdk)/includes
-	LIBS+=$(MODULE_hikrobot_camera_sdk)/libraries/win64/MvCameraControl.lib
-
-endif
-
-
-ifeq ($(FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK),1)
-
-	FLAGS+= -D FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK
-	IDIR+=$(MODULE_MindVision_GIGE)/include
-
-
-	ifeq ($(OS)$(CC),Windows_NTcc)
-		EXT_OBJS+= $(MODULE_MindVision_GIGE)/lib/MVCAMSDK.lib
-	else
-		FLAGS+=-L$(MODULE_MindVision_GIGE)/lib/ -lmvsdk 
-	endif
-
-endif
-
-
-export FLAGS+= -w -O3 $(STRICT_FLAGS) 
+export FLAGS+= -w -O3 $(STRICT_FLAGS) $(FEATURE_FLAGS)
 
 include $(MakeTemplate)
 
@@ -209,7 +144,7 @@ else
 	cp $(target_bin)* $(EXPORT_PATH)/
 	cp -r init_data $(EXPORT_PATH)/
 
-ifeq ($(OS)$(CC),Windows_NTcc)
+ifeq ($(OS),Windows_NT)
 else
 	cp -r *.dylib $(EXPORT_PATH)/
 endif
@@ -223,3 +158,8 @@ domake: prepare  $(SUB_MAKEFILES) build_objs $(target_bin) $(target_a) $(target_
 release: 
 	make -C $(abspath .) domake
 	make -C $(abspath .) export EXPORT_PATH=$(abspath .)/../release_export/InspectionCore/$(platform)
+
+
+
+runCMake: 
+	make
