--- a/InspectionCore/Core0_1/CMakeLists.txt
+++ b/InspectionCore/Core0_1/CMakeLists.txt
@@ -33,76 +33,25 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-set ( ENV{MODULE_acvImage} ${MWD}/acvImage)
-set ( ENV{MODULE_cwebsocket} ${MWD}/contrib/cwebsocket)
-set ( ENV{MODULE_circleFitting} ${MWD}/contrib/circleFitting)
-set ( ENV{MODULE_MindVision_GIGE} ${MWD}/contrib/MindVision_GIGE/${platform})
-
-set ( ENV{MODULE_hikrobot_camera_sdk} ${MWD}/contrib/hikrobot_camera_sdk)
-set ( ENV{MODULE_Compat_dirent} ${MWD}/contrib/Compat_dirent/${platform})
-set ( ENV{MODULE_cJSON} ${MWD}/contrib/cJSON)
-set ( ENV{MODULE_logctrl} ${MWD}/logctrl)
-set ( ENV{MODULE_common_lib} ${MWD}/common_lib)
-set ( ENV{MODULE_zlib} ${MWD}/contrib/zlib-1.2.11)
-set ( ENV{MODULE_SOIL} ${MWD}/contrib/SOIL)
-set ( ENV{MODULE_polyfit} ${MWD}/contrib/polyfit)
-set ( ENV{MODULE_lodepng} ${MWD}/contrib/lodepng)
-set ( ENV{MODULE_shape_based_matching} ${MWD}/contrib/shape_based_matching)
-set ( ENV{MODULE_CameraLayer} ${MWD}/CameraLayer)
-set ( ENV{MODULE_wfqueue} ${MWD}/contrib/wfqueue)
-set ( ENV{MODULE_MatchingEngine} ${MWD}/MatchingEngine)
-set ( ENV{MODULE_BPG_Protocol} ${MWD}/BPG_Protocol)
-set ( ENV{MODULE_smem_channel} ${MWD}/contrib/smem_channel)
-set ( ENV{MODULE_MJPEG_Streamer} ${MWD}/MJPEG_Streamer)
-
-set ( ENV{MODULE_mjpegLib} ${MWD}/contrib/mjpegLib)
 
 set ( OS_SP_inc )
 
 
-
-set ( ENV{FEATURE_COMPILE_W_ARAVIS} 0)
-set ( ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} 0)
-set ( ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} 0)
-
-
-
-
-if(MSVC OR MSYS OR MINGW)
-    # for detecting Windows compilers
-endif()
-
-
-
   
 if(MSVC OR MSYS OR MINGW)
-  set (OS_DEP_LIB  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib )
-  
-  set ( ENV{FEATURE_COMPILE_W_ARAVIS} 0)
-  set ( ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} 1)
-  set ( ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} 1)
-
   set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 else(APPLE)
-
-  set ( ENV{FEATURE_COMPILE_W_ARAVIS} 1)
-  set ( ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} 0)
-  set ( ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} 1)
-set (OS_DEP_LIB  
-  $ENV{MODULE_MindVision_GIGE}/lib/libmvsdk.dylib
-   )
 endif()
 # add_executable (helloTest helloTest.cpp )
 
-
-add_subdirectory($ENV{MODULE_MatchingEngine} $ENV{MODULE_MatchingEngine})
-add_subdirectory($ENV{MODULE_shape_based_matching} $ENV{MODULE_shape_based_matching})
 
 add_custom_target(really-clean
   COMMAND "$(CMAKE)" --build "${CMAKE_BINARY_DIR}" clean
   COMMAND make -f "${CMAKE_CURRENT_SOURCE_DIR}/Makefile_mods" clean
 )
 
+add_subdirectory($ENV{MODULE_MatchingEngine} $ENV{MODULE_MatchingEngine})
+add_subdirectory($ENV{MODULE_shape_based_matching} $ENV{MODULE_shape_based_matching})
 
 add_custom_target(
     mod_target
@@ -111,6 +60,8 @@ add_custom_target(
 )
 
 
+SET(COMMON_COMPILE_FLAGS "-Wall -Wno-sign-compare -Wno-write-strings -Wno-unused-variable")
+SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${COMMON_COMPILE_FLAGS}")
 
 if($ENV{FEATURE_COMPILE_W_ARAVIS} EQUAL 1)
   SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_ARAVIS")
@@ -122,6 +73,12 @@ if($ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} EQUAL 1)
   SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_hikrobot_camera_sdk}/libraries/win64/MvCameraControl.lib)
 endif()
 if($ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} EQUAL 1)
+
+  if(MSVC OR MSYS OR MINGW)
+    set (OS_DEP_LIB  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib )
+  else(APPLE)
+    set (OS_DEP_LIB  $ENV{MODULE_MindVision_GIGE}/lib/libmvsdk.dylib )
+  endif()
   SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_MINDVISION_CAMERA_SDK")
   SET(INCLUDE_DIRECTORIES  ${INCLUDE_DIRECTORIES} $ENV{MODULE_MindVision_GIGE}/include)
   SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib)
@@ -130,10 +87,10 @@ endif()
 
 add_executable (visSele main.cpp Ext_Util_API.cpp tmpCodes.cpp wiringPanel.cpp)
 
-add_dependencies(visSele mod_target)
+add_dependencies(visSele mod_target MatchingEngine shape_based_matching)
 
 target_link_libraries(visSele
-  $ENV{MODULE_MatchingEngine}/libMachingEng.a
+  $ENV{MODULE_MatchingEngine}/libMatchingEngine.a
   $ENV{MODULE_circleFitting}/CircleFitting.a 
   $ENV{MODULE_cJSON}/cJSON.a 
   $ENV{MODULE_logctrl}/logctrl.a 
@@ -186,6 +143,7 @@ include_directories (
   )
   
 
-  install (TARGETS visSele  DESTINATION .)
-  install (DIRECTORY init_data  DESTINATION .)
-  install (FILES ${OS_DEP_LIB}  DESTINATION .)
+
+install (TARGETS visSele  DESTINATION .)
+install (DIRECTORY init_data  DESTINATION .)
+install (FILES ${OS_DEP_LIB}  DESTINATION .)
