--- a/InspectionCore/MatchingEngine/CMakeLists.txt
+++ b/InspectionCore/MatchingEngine/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 set (CMAKE_CXX_STANDARD 14)
-project(MachingEng)
+project(MatchingEngine)
 
 
 include_directories (
