--- a/InspectionCore/Core0_1/Makefile_mods
+++ b/InspectionCore/Core0_1/Makefile_mods
@@ -224,7 +224,19 @@ release:
 	make -C $(abspath .) domake
 	make -C $(abspath .) export EXPORT_PATH=$(abspath .)/../release_export/InspectionCore/$(platform)
 
+:
 
+.PHONY:export_binary
+export_binary:
+ifeq ($(EXPORT_PATH),)
+	$(error "No EXPORT_PATH was set")
+else
+	-@[ ! -z "$(EXPORT_PATH)" ]&&mkdir -p $(EXPORT_PATH) || true
+	cp visSele* $(EXPORT_PATH)/
+	cp $(MODULE_MindVision_GIGE)/lib/* $(EXPORT_PATH)/
+	cp -r init_data $(EXPORT_PATH)/
+
+endif
 
 runCMake: 
 	sh InitCMake.sh
