Core: build fix aravis build error on mac

--- a/InspectionCore/Core0_1/CMakeLists.txt
+++ b/InspectionCore/Core0_1/CMakeLists.txt
@@ -34,7 +34,7 @@ if (OPENMP_FOUND)
 endif()
 
 
-set ( OS_SP_inc )
+find_package(PkgConfig REQUIRED)
 
 
   
@@ -66,6 +66,24 @@ SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${COMMON_COMPILE_FLAGS}")
 if($ENV{FEATURE_COMPILE_W_ARAVIS} EQUAL 1)
   SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_ARAVIS")
   SET(INCLUDE_DIRECTORIES  ${INCLUDE_DIRECTORIES} $ENV{MODULE_aravis}/include $ENV{MODULE_aravis}/src)
+
+    
+  
+  if(MSVC OR MSYS OR MINGW)
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_aravis}/${platform}/MVCAMSDK.lib)
+  else(APPLE)
+  
+    pkg_search_module(GLIB REQUIRED glib-2.0)
+    # message( >>>> ${GLIB_INCLUDE_DIRS} )
+    set ( OS_SP_inc "${OS_SP_inc} ${GLIB_INCLUDE_DIRS}")
+    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+    
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA} ${GTK3_LINK_LIBRARIES})
+    # message(STATUS "----- GTK3_INCLUDE_DIRS: ${GTK3_INCLUDE_DIRS}")
+    # message(STATUS "----- GKT3_LIBRARIES: ${GTK3_LIBRARIES}")
+    # message(STATUS "----- GTK3_LINK_LIBRARIES: ${GTK3_LINK_LIBRARIES}")
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_aravis}/src/libaravis-0.8.0.dylib)
+  endif()
 endif()
 if($ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} EQUAL 1)
   SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK")
@@ -74,14 +92,16 @@ if($ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} EQUAL 1)
 endif()
 if($ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} EQUAL 1)
 
-  if(MSVC OR MSYS OR MINGW)
-    set (OS_DEP_LIB  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib )
-  else(APPLE)
-    set (OS_DEP_LIB  $ENV{MODULE_MindVision_GIGE}/lib/libmvsdk.dylib )
-  endif()
   SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_MINDVISION_CAMERA_SDK")
   SET(INCLUDE_DIRECTORIES  ${INCLUDE_DIRECTORIES} $ENV{MODULE_MindVision_GIGE}/include)
-  SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib)
+
+  
+  if(MSVC OR MSYS OR MINGW)
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib)
+  else(APPLE)
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_MindVision_GIGE}/lib/libmvsdk.dylib)
+  endif()
+  
   
 endif()
 
