--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -19,6 +19,7 @@
     "@antv/data-set": "^0.11.8",
     "@antv/g2": "^4.1.14",
     "@babel/preset-react": "^7.13.13",
+    "ajv": "^6.12.6",
     "antd": "^4.15.2",
     "chart.js": "^2.9.4",
     "chartjs-plugin-annotation": "^0.5.7",
