Peripheral: MStepper milestone2 50kHz passed

--- a/Peripheral/misc/M_Stepper_TEST/Makefile
+++ b/Peripheral/misc/M_Stepper_TEST/Makefile
@@ -8,7 +8,7 @@ SysSyncFolder=../../SysSync
 VPATH=$(SysSyncFolder) ./
 export MakeTemplate:= ./Makefile.in
 
-
+ESS_TRACK=$(SysSyncFolder)/include/* $(SysSyncFolder)/*
 
 IDIR=	./ $(SysSyncFolder)/ $(SysSyncFolder)/include
 # EXT_OBJS= $(MODULE_libxd)/lib/libglad.a \
