Peripheral: MStepper update

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ InspectionCore/MatchingEngine/CMakeFiles/
 InspectionCore/MatchingEngine/Makefile
 InspectionCore/Core0_1/install_manifest.txt
 InspectionCore/Core0_1/MODULE_MatchingEngine/
+InspectionCore/Core0_1/B3_1.hydef
+InspectionCore/Core0_1/visSele_bk
