CoreHub: add to rework the process

--- a/InspectionCore/CoreHub/CMakeLists.txt
+++ b/InspectionCore/CoreHub/CMakeLists.txt
@@ -1,17 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
 set (CMAKE_CXX_STANDARD 14)
-project(CORE_HUB)
+project(CORE0_1)
 
 set (PWD ${CMAKE_CURRENT_SOURCE_DIR})
 set (MWD ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 
+
+
 if(MSVC OR MSYS OR MINGW)
   set ( platform win_x64)
+  
+  set (PLAT_LIBS wsock32 ws2_32)
+
 else(APPLE)
   set ( platform mac_x64)
 endif()
 
+
+set(OpenCV_DIR C:/OpenCV-MinGW)
 
 
 # opencv
@@ -27,94 +34,131 @@ if (OPENMP_FOUND)
 endif()
 
 
+find_package(PkgConfig REQUIRED)
 
 
-set ( MODULE_acvImage ${MWD}/acvImage)
-set ( MODULE_cwebsocket ${MWD}/contrib/cwebsocket)
-set ( MODULE_circleFitting ${MWD}/contrib/circleFitting)
-set ( MODULE_MindVision_GIGE ${MWD}/contrib/MindVision_GIGE/${platform})
-set ( MODULE_Compat_dirent ${MWD}/contrib/Compat_dirent/${platform})
-set ( MODULE_cJSON ${MWD}/contrib/cJSON)
-set ( MODULE_logctrl ${MWD}/logctrl)
-set ( MODULE_common_lib ${MWD}/common_lib)
-set ( MODULE_zlib ${MWD}/contrib/zlib-1.2.11)
-set ( MODULE_SOIL ${MWD}/contrib/SOIL)
-set ( MODULE_polyfit ${MWD}/contrib/polyfit)
-set ( MODULE_lodepng ${MWD}/contrib/lodepng)
-set ( MODULE_shape_based_matching ${MWD}/contrib/shape_based_matching)
-set ( MODULE_DataChannel ${MWD}/DataChannel)
-set ( MODULE_CameraLayer ${MWD}/CameraLayer)
-set ( MODULE_wfqueue ${MWD}/contrib/wfqueue)
-
-
-
-set ( OS_SP_inc )
-
+  
 if(MSVC OR MSYS OR MINGW)
-    # for detecting Windows compilers
+  set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
+else(APPLE)
+endif()
+# add_executable (helloTest helloTest.cpp )
+
+
+add_custom_target(really-clean
+  COMMAND "$(CMAKE)" --build "${CMAKE_BINARY_DIR}" clean
+  COMMAND make -f "${CMAKE_CURRENT_SOURCE_DIR}/Makefile_mods" clean
+)
+
+add_subdirectory($ENV{MODULE_MatchingEngine} $ENV{MODULE_MatchingEngine})
+add_subdirectory($ENV{MODULE_shape_based_matching} $ENV{MODULE_shape_based_matching})
+
+add_custom_target(
+    mod_target
+    COMMAND make -f "${CMAKE_CURRENT_SOURCE_DIR}/Makefile_mods"
+
+)
+
+
+SET(COMMON_COMPILE_FLAGS "-Wall -Wno-sign-compare -Wno-write-strings -Wno-unused-variable")
+SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${COMMON_COMPILE_FLAGS}")
+
+if($ENV{FEATURE_COMPILE_W_ARAVIS} EQUAL 1)
+  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_ARAVIS")
+  SET(INCLUDE_DIRECTORIES  ${INCLUDE_DIRECTORIES} $ENV{MODULE_aravis}/include $ENV{MODULE_aravis}/src)
+
+    
+  
+  if(MSVC OR MSYS OR MINGW)
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_aravis}/${platform}/MVCAMSDK.lib)
+  else(APPLE)
+  
+    pkg_search_module(GLIB REQUIRED glib-2.0)
+    # message( >>>> ${GLIB_INCLUDE_DIRS} )
+    set ( OS_SP_inc "${OS_SP_inc} ${GLIB_INCLUDE_DIRS}")
+    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+    
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA} ${GTK3_LINK_LIBRARIES})
+    # message(STATUS "----- GTK3_INCLUDE_DIRS: ${GTK3_INCLUDE_DIRS}")
+    # message(STATUS "----- GKT3_LIBRARIES: ${GTK3_LIBRARIES}")
+    # message(STATUS "----- GTK3_LINK_LIBRARIES: ${GTK3_LINK_LIBRARIES}")
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_aravis}/src/libaravis-0.8.0.dylib)
+  endif()
+endif()
+if($ENV{FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK} EQUAL 1)
+  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK")
+  SET(INCLUDE_DIRECTORIES  ${INCLUDE_DIRECTORIES} $ENV{MODULE_hikrobot_camera_sdk}/includes)
+  SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_hikrobot_camera_sdk}/libraries/win64/MvCameraControl.lib)
+endif()
+if($ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} EQUAL 1)
+
+  SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DFEATURE_COMPILE_W_MINDVISION_CAMERA_SDK")
+  SET(INCLUDE_DIRECTORIES  ${INCLUDE_DIRECTORIES} $ENV{MODULE_MindVision_GIGE}/include)
+
+  
+  if(MSVC OR MSYS OR MINGW)
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib)
+  else(APPLE)
+    SET(LINK_LIBS_CAMERA ${LINK_LIBS_CAMERA}  $ENV{MODULE_MindVision_GIGE}/lib/libmvsdk.dylib)
+  endif()
+  
+  
 endif()
 
+add_executable (visSele main.cpp Ext_Util_API.cpp tmpCodes.cpp wiringPanel.cpp)
 
+add_dependencies(visSele mod_target MatchingEngine shape_based_matching)
+
+target_link_libraries(visSele
+  $ENV{MODULE_MatchingEngine}/libMatchingEngine.a
+  $ENV{MODULE_circleFitting}/CircleFitting.a 
+  $ENV{MODULE_cJSON}/cJSON.a 
+  $ENV{MODULE_logctrl}/logctrl.a 
+  $ENV{MODULE_common_lib}/common_lib.a 
+  $ENV{MODULE_acvImage}/acvImage.a 
+  $ENV{MODULE_CameraLayer}/CameraLayer.a 
+  $ENV{MODULE_circleFitting}/CircleFitting.a
+  $ENV{MODULE_lodepng}/lodepng.a 
+  $ENV{MODULE_polyfit}/polyfit.a 
+  $ENV{MODULE_zlib}/staticlib/libz.a
+  $ENV{MODULE_mjpegLib}/mjpegLib.a 
+  $ENV{MODULE_MJPEG_Streamer}/MJPEG_Streamer.a
+  $ENV{MODULE_BPG_Protocol}/BPG_Protocol.a
+
+  $ENV{MODULE_shape_based_matching}/libshape_based_matching.a
+  ${OS_DEP_LIB}
+  ${OpenCV_LIBS}
+  ${PLAT_LIBS}
+  ${LINK_LIBS_CAMERA}
+  )
+
+message(------------${INCLUDE_DIRECTORIES})
 include_directories (
   ${INCLUDE_DIRECTORIES}
   "." 
   "./include"
-  ${MODULE_acvImage}/include/ 
-  ${MODULE_circleFitting} 
-  ${MODULE_common_lib}/include 
-  ${MODULE_cJSON} 
-  ${MODULE_logctrl}/include 
-  ${MODULE_zlib}/src 
-  ${MODULE_DataChannel}/include
-  ${MODULE_CameraLayer}/include 
-  ${MODULE_MindVision_GIGE}/include 
-  ${MODULE_Compat_dirent}/include 
-  ${MODULE_polyfit}/include 
-  ${MODULE_shape_based_matching}/include 
-  ${MODULE_shape_based_matching}/MIPP 
-  ${MODULE_wfqueue}
-  ${MODULE_lodepng}
+  $ENV{MODULE_acvImage}/include/ 
+  $ENV{MODULE_circleFitting} 
+  $ENV{MODULE_common_lib}/include 
+  $ENV{MODULE_cJSON} 
+  $ENV{MODULE_logctrl}/include 
+  $ENV{MODULE_zlib}/src 
+  $ENV{MODULE_CameraLayer}/include 
+  $ENV{MODULE_MindVision_GIGE}/include 
+  $ENV{MODULE_Compat_dirent}/include 
+  $ENV{MODULE_polyfit}/include 
+  $ENV{MODULE_shape_based_matching}/include 
+  $ENV{MODULE_shape_based_matching}/MIPP 
+  $ENV{MODULE_MatchingEngine}/include
+  $ENV{MODULE_MatchingEngine}/include_priv
+  $ENV{MODULE_MatchingEngine}/MorphEngine/include
+  $ENV{MODULE_mjpegLib}/include
+  $ENV{MODULE_MJPEG_Streamer}/include
+  $ENV{MODULE_BPG_Protocol}/include 
+  $ENV{MODULE_smem_channel}
+  $ENV{MODULE_wfqueue}
+  $ENV{MODULE_lodepng}
   ${OS_SP_inc}
+  ${OpenCV_INCLUDE_DIRS}
   )
   
-add_executable (helloTest helloTest.cpp )
-
-
-add_executable (${PROJECT_NAME} main.cpp Ext_Util_API.cpp tmpCodes.cpp wiringPanel.cpp)
-
-add_custom_command(TARGET ${PROJECT_NAME}
-                  PRE_BUILD 
-                  COMMAND make -f "${CMAKE_CURRENT_SOURCE_DIR}/Makefile_mods"
-                  )
-
-
-
-if(MSVC OR MSYS OR MINGW)
-  set (OS_DEP_LIB  
-    ${MODULE_MindVision_GIGE}/lib/MVCAMSDK.lib
-    )
-else(APPLE)
-  set (OS_DEP_LIB  
-    ${MODULE_MindVision_GIGE}/lib/libmvsdk.dylib
-     )
-endif()
-
-
-
-target_link_libraries(${PROJECT_NAME} 
-  ${MODULE_circleFitting}/CircleFitting.a 
-  ${MODULE_cJSON}/cJSON.a 
-  ${MODULE_logctrl}/logctrl.a 
-  ${MODULE_common_lib}/common_lib.a 
-  ${MODULE_DataChannel}/DataChannel.a 
-  ${MODULE_acvImage}/acvImage.a 
-  ${MODULE_CameraLayer}/CameraLayer.a 
-  ${MODULE_lodepng}/lodepng.a 
-  ${MODULE_polyfit}/polyfit.a 
-  ${MODULE_zlib}/staticlib/libz.a
-
-  ${MODULE_shape_based_matching}/libshape_based_matching.a
-  ${OS_DEP_LIB}
-  ${OpenCV_LIBS}
-  
-  )
